[gd_scene load_steps=50 format=3 uid="uid://cbiyjqctoq0j3"]

[ext_resource type="Script" uid="uid://e8vo2bsuywb5" path="res://dev/character/player/player_cat.gd" id="1_u0lhy"]
[ext_resource type="Resource" uid="uid://dp4dsw13mlp8d" path="res://dev/resource_scripts/inventory/player_inventory.tres" id="2_u0b4o"]
[ext_resource type="Texture2D" uid="uid://36gcbqnboa6a" path="res://dev/character/player/Character_Spritesheet_Walking.png" id="3_5cym0"]
[ext_resource type="Script" uid="uid://b6o4m7pjfqf0g" path="res://dev/character/player/interaction_component.gd" id="3_hhb2n"]
[ext_resource type="PackedScene" uid="uid://dfit58o77nitj" path="res://dev/character/player/interaction_component_ui.tscn" id="4_gx6m4"]
[ext_resource type="Script" uid="uid://k3s344uqwqnq" path="res://dev/character/player/player_animation_tree.gd" id="5_5cym0"]
[ext_resource type="Script" uid="uid://dglu3aa55phcp" path="res://dev/character/player/components/HitEffectManager.gd" id="5_ipawb"]
[ext_resource type="Texture2D" uid="uid://dypt1whr6ayfu" path="res://art/GAMEDES art/Characters/Character_Basic_death.png" id="5_yegy7"]
[ext_resource type="Script" uid="uid://dfextwrggf02y" path="res://dev/camera_effects/camera_effect_manager.gd" id="6_1f8vj"]
[ext_resource type="PackedScene" uid="uid://bsgk4iyfgu77y" path="res://dev/character/sanity_component/sanity_ui_component.tscn" id="7_6merf"]
[ext_resource type="Script" uid="uid://bpgerp0xif3aw" path="res://dev/character/player/components/HItEffectPoison.gd" id="7_crtd1"]
[ext_resource type="Script" uid="uid://d3yisgeep3p7b" path="res://dev/character/player/components/HitEffectDamage.gd" id="8_c8r0g"]
[ext_resource type="PackedScene" uid="uid://bpbf560c0338r" path="res://dev/resource_scripts/inventory/inventory_ui.tscn" id="9_ohocd"]
[ext_resource type="Texture2D" uid="uid://br7dqghldew4e" path="res://dev/light_textures/lantern_round.tres" id="10_04nme"]
[ext_resource type="PackedScene" path="res://dev/character/player/audio_stream_player_2d_foot_sound.tscn" id="14_mxnrt"]
[ext_resource type="AudioStream" uid="uid://cvuuwq222nvfx" path="res://art/Audio Assets/20 - Player Grab.wav" id="15_mxnrt"]
[ext_resource type="AudioStream" uid="uid://cw1gbbtkyhtjn" path="res://art/Audio Assets/17 - Moderate Heartbeat-mprMode.mp3" id="17_l5slc"]
[ext_resource type="Script" uid="uid://b3o3ajfg8m46d" path="res://dev/character/player/FootStepManager.gd" id="18_iqj7j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gx6m4"]
radius = 43.8

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_71ai2"]
cull_mode = 2
polygon = PackedVector2Array(-10, -28, -1, -30, 9, -28, 13, -20, 6, -6, 5, -3, 6, 3, 3, 23, 3, 28, -7, 26, -8, 4, -8, 0, -6, -3, -14, -18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8dsg"]
size = Vector2(22, 39)

[sub_resource type="Animation" id="Animation_u0lhy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_5cym0")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_l5slc"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_yegy7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.06666667, 0.16666669, 0.3333333, 0.56666666, 0.6333333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_gx6m4"]
resource_name = "idle_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D-FootSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_5cym0")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_nf2gw"]
resource_name = "idle_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 9]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D-FootSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_5cym0")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_ctw3t"]
resource_name = "idle_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 6]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D-FootSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_5cym0")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_k8wwv"]
resource_name = "idle_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D-FootSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_5cym0")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_hhb2n"]
resource_name = "walk_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("AudioStreamPlayer2D-FootSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_footsteps"
}, {
"args": [],
"method": &"stop"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attempt_play_footsteps"
}]
}

[sub_resource type="Animation" id="Animation_10mfh"]
resource_name = "walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 11]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("AudioStreamPlayer2D-FootSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_footsteps"
}, {
"args": [],
"method": &"stop"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attempt_play_footsteps"
}]
}

[sub_resource type="Animation" id="Animation_t8sd1"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 8]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("AudioStreamPlayer2D-FootSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_footsteps"
}, {
"args": [],
"method": &"stop"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attempt_play_footsteps"
}]
}

[sub_resource type="Animation" id="Animation_twab1"]
resource_name = "walk_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("AudioStreamPlayer2D-FootSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_footsteps"
}, {
"args": [],
"method": &"stop"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attempt_play_footsteps"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_twab1"]
_data = {
&"RESET": SubResource("Animation_u0lhy"),
&"death": SubResource("Animation_l5slc"),
&"idle_down": SubResource("Animation_gx6m4"),
&"idle_left": SubResource("Animation_nf2gw"),
&"idle_right": SubResource("Animation_ctw3t"),
&"idle_up": SubResource("Animation_k8wwv"),
&"walk_down": SubResource("Animation_hhb2n"),
&"walk_left": SubResource("Animation_10mfh"),
&"walk_right": SubResource("Animation_t8sd1"),
&"walk_up": SubResource("Animation_twab1")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ox3q8"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hanlt"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_svhcd"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rlxnt"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_k8wwv"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ox3q8")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_hanlt")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_svhcd")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_rlxnt")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_twrvn"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ib1s3"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eqjkd"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h0es0"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_10mfh"]
blend_point_0/node = SubResource("AnimationNodeAnimation_twrvn")
blend_point_0/pos = Vector2(0, 0.90000004)
blend_point_1/node = SubResource("AnimationNodeAnimation_ib1s3")
blend_point_1/pos = Vector2(0, -0.90000004)
blend_point_2/node = SubResource("AnimationNodeAnimation_eqjkd")
blend_point_2/pos = Vector2(-1, 0.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_h0es0")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yegy7"]
animation = &"death"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t8sd1"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nf2gw"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ctw3t"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yegy7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l5slc"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_qwdhh"]
states/End/position = Vector2(659, 107)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_k8wwv")
states/Idle/position = Vector2(314, 92)
states/Start/position = Vector2(194, 92)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_10mfh")
states/Walk/position = Vector2(434, 92)
states/death/node = SubResource("AnimationNodeAnimation_yegy7")
states/death/position = Vector2(451, 183)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_t8sd1"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_nf2gw"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_ctw3t"), "Idle", "death", SubResource("AnimationNodeStateMachineTransition_yegy7"), "Walk", "death", SubResource("AnimationNodeStateMachineTransition_l5slc")]

[node name="PlayerCat" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_u0lhy")
move_speed = 200.0
inventory = ExtResource("2_u0b4o")
metadata/_edit_horizontal_guides_ = [-31.0]

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 3
position = Vector2(0, -9)
texture = ExtResource("3_5cym0")
hframes = 3
vframes = 4
frame = 3

[node name="InteractionComponent" type="Area2D" parent="Sprite2D"]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource("3_hhb2n")
interaction_parent = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/InteractionComponent"]
position = Vector2(-8, 5)
rotation = 0.58849967
shape = SubResource("CircleShape2D_gx6m4")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite2D"]
occluder = SubResource("OccluderPolygon2D_71ai2")
occluder_light_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -2)
shape = SubResource("RectangleShape2D_k8dsg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_twab1")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
deterministic = false
tree_root = SubResource("AnimationNodeStateMachine_qwdhh")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(0.14393938, 0.10476196)
parameters/Walk/blend_position = Vector2(-0.32551318, -0.04035878)
script = ExtResource("5_5cym0")

[node name="InteractionComponentUI" parent="." instance=ExtResource("4_gx6m4")]

[node name="InvulTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HitEffectManager" type="Node" parent="."]
script = ExtResource("5_ipawb")

[node name="HitEffectPoison" type="Node" parent="HitEffectManager"]
script = ExtResource("7_crtd1")
metadata/_custom_type_script = "uid://bpgerp0xif3aw"

[node name="HitEffectDamage" type="Node" parent="HitEffectManager"]
script = ExtResource("8_c8r0g")
metadata/_custom_type_script = "uid://d3yisgeep3p7b"

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
script = ExtResource("6_1f8vj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SanityUIComponent" parent="CanvasLayer" instance=ExtResource("7_6merf")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_right = 34.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory_UI" parent="CanvasLayer" instance=ExtResource("9_ohocd")]
z_index = 11
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
offset_left = -673.0
offset_top = -15.0
grow_horizontal = 0
grow_vertical = 0

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(3, -3, 283, -125, 279, 164, 0, 0, 0, 0)

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(5, 5)
enabled = false
color = Color(1, 0.835, 0.33999997, 1)
shadow_enabled = true
shadow_item_cull_mask = 33
texture = ExtResource("10_04nme")

[node name="AudioStreamPlayer2D-FootSound" parent="." node_paths=PackedStringArray("player") instance=ExtResource("14_mxnrt")]
player = NodePath("..")

[node name="AnimationPlayer-GrabSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_mxnrt")
volume_db = -7.429
max_distance = 200.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 8
simplify_path = true
simplify_epsilon = 2.0

[node name="AudioStreamPlayer2D-Heartbeat" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_l5slc")
max_distance = 100.0

[node name="FootStepManager" type="Node" parent="." node_paths=PackedStringArray("player", "base_player")]
script = ExtResource("18_iqj7j")
player = NodePath("..")
base_player = NodePath("../AudioStreamPlayer2D-FootSound")

[connection signal="body_entered" from="Sprite2D/InteractionComponent" to="Sprite2D/InteractionComponent" method="_on_InteractionComponent_body_entered"]
[connection signal="body_exited" from="Sprite2D/InteractionComponent" to="Sprite2D/InteractionComponent" method="_on_InteractionComponent_body_exited"]
[connection signal="timeout" from="InvulTimer" to="." method="_on_invul_timer_timeout"]
